--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "client-install": "npm install --prefix client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run serve\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -27,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "vue": "^2.6.12"
   }
 }
